--- a/StgSqOH5rMV36AyRtwu8.html
+++ b/StgSqOH5rMV36AyRtwu8.html
@@ -20,13 +20,13 @@
             </div>
             <div id="slide-3" class="hidden slide">
                 <h3>2. jautājums</h3>
-                <img src="./assets/2 uzd.png">
+                <img src="2 uzd.png">
                 <input type="text" class="form-control input">
                 <button type="button" class="btn btn-primary next-slide" id="slide-3-next">Tālāk</button>
             </div>
             <div id="slide-4" class="hidden slide">
                 <h3>3. jautājums</h3>
-                <img src="./assets/3 uzd.png">
+                <img src="3 uzd.png">
                 <div id="row1" class="single-letter-input">
                     <input type="text" class="form-control input" maxlength="1">
                     <input type="text" class="form-control input" maxlength="1">
@@ -47,7 +47,7 @@
             </div>
             <div id="slide-5" class="hidden slide">
                 <h3>4. jautājums</h3>
-                <img src="./assets/4 uzd.png">
+                <img src="4 uzd.png">
             </div>
         </div>
         <script src="script.js"></script>
