--- a/StgSqOH5rMV36AyRtwu8.html
+++ b/StgSqOH5rMV36AyRtwu8.html
@@ -14,7 +14,7 @@
             </div>
             <div id="slide-2" class="hidden slide">
                 <h3>1. jautājums</h3>
-                <p>Rīgas Kultūras un izglītības darbinieku tehnikuma adrese:</p>
+                <img src="1_uzd.png">
                 <input type="text" class="form-control input">
                 <button type="button" class="btn btn-primary next-slide" id="slide-2-next">Tālāk</button>
             </div>
