--- a/StgSqOH5rMV36AyRtwu8.html
+++ b/StgSqOH5rMV36AyRtwu8.html
@@ -26,7 +26,7 @@
             </div>
             <div id="slide-4" class="hidden slide">
                 <h3>3. jautājums</h3>
-                <img src="3 uzd.png">
+                <img src="3_uzd.png">
                 <div id="row1" class="single-letter-input">
                     <input type="text" class="form-control input" maxlength="1">
                     <input type="text" class="form-control input" maxlength="1">
